Create user gesture indicator for pointerup

Creating a user gesture token before dispatching
pointerup event

BUG=609363

Review-Url: https://codereview.chromium.org/2401643005
Cr-Commit-Position: refs/heads/master@{#425022}

Former-commit-id: 53723b1ce879dcd1e5500fe8a3ad070f9dd3543a